"Develep the create account scenario"
Add new jenkins file to run in jenkins

And change the pom.xml also

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
             <artifactId>javax.mail</artifactId>
             <version>1.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.32</version> <!-- Use the latest version -->
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 
