--- a/pom.xml
+++ b/pom.xml
@@ -45,18 +45,20 @@
         </dependency>
 
         <!-- JUnit -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>junit</groupId>-->
 <!--            <artifactId>junit</artifactId>-->
 <!--            <version>4.13.2</version>-->
-<!--            <scope>compile</scope>-->
+<!--            <scope>test</scope>-->
 <!--        </dependency>-->
+
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>compile</scope>
+        </dependency>
 
 <!--        <dependency>-->
 <!--            <groupId>io.cucumber</groupId>-->
