--- a/src/main/java/Utils/Config.properties
+++ b/src/main/java/Utils/Config.properties
@@ -1,4 +1,4 @@
 browser = chrome
-castcoappurl= https://www.costco.com/
 commonPasscode = Test@123456
-validUserName=testdjfhlsjdh@yopmail.com
+validUserName=aravind@yopmail.com
+asourl=https://uat6www.academy.com/?debug=aso
